--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL= mongodb+srv://caspr117:2025@cluster0.1sy8ker.mongodb.net/accounts?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL= mongodb+srv://caspr117:2025@cluster0.1sy8ker.mongodb.net/bank?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
